Fix background white space

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2014,13 +2014,13 @@
 
 	#header {
 		position: relative;
-		background-image: url("https://res.cloudinary.com/zwitch/image/upload/q_100/v1504221645/Portfolio/header.png");
+		background-image: url("https://res.cloudinary.com/zwitch/image/upload/v1504238401/Portfolio/header.png");
 		background-size: cover;
 		background-position: center center;
 		background-attachment: fixed;
 		color: #483949;
 		text-align: center;
-		padding: 7.5em 0 2em 0;
+		padding: 7.5em 0 0em 0;
 		cursor: default;
 	}
 
@@ -2034,14 +2034,15 @@
 		#header .inner {
 			position: relative;
 			z-index: 1;
-			margin: 0;
 			display: inline-block;
 			vertical-align: middle;
+			margin: 0;
 		}
 
 		#header header {
 			display: inline-block;
 		}
+
 			#header header img {
 				width: 250px;
 				height: 100%;
@@ -2051,7 +2052,7 @@
 
 			#header p {
 				font-size: 1.25em;
-				margin: 0;
+				margin: 0 0 50px 0;
 			}
 
 		#header h1 {
@@ -2126,7 +2127,6 @@
 	body.homepage.is-loading #header:after {
 		opacity: 1;
 	}
-
 
 /* Banner */
 
